--- a/.github/workflows/Backend-deploy.yml
+++ b/.github/workflows/Backend-deploy.yml
@@ -12,22 +12,22 @@ jobs:
     runs-on: self-hosted
     permissions:
       contents: read
-    
     steps:
-      - name: Checkout API repository
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Checkout Data repository
-        uses: actions/checkout@v4
-        with:
-          repository: NodPT/NodPT.Data
-          path: NodPT.Data
 
       - name: Verify directory layout
+        working-directory: .
         run: |
           echo "Workspace content:"
           pwd
-          ls -R | grep .csproj
+          ls
+          echo "\nWebAPI contents:"
+          ls WebAPI/src
+          echo "\nData contents:"
+          ls Data/src
+          test -f WebAPI/src/NodPT.API.csproj
+          test -f Data/src/NodPT.Data.csproj
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -38,15 +38,18 @@ jobs:
           docker pull mcr.microsoft.com/dotnet/aspnet:8.0
 
       - name: Build Docker image
+        working-directory: WebAPI
         run: |
-          docker build --pull --no-cache -t nodpt-api:latest .
+          docker compose build --pull --no-cache
 
       - name: Deploy with Docker Compose
+        working-directory: WebAPI
         run: |
-          docker compose down
+          docker compose down || true
           docker compose up -d --build --pull always
 
       - name: Verify deployment health
+        working-directory: WebAPI
         run: |
           echo "Waiting for API health endpoint..."
           for i in {1..3}; do
@@ -63,4 +66,5 @@ jobs:
 
       - name: Show logs on failure
         if: failure()
+        working-directory: WebAPI
         run: docker compose logs
