--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,16 +1,17 @@
 # Stage 1: Build static assets
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY package*.json ./
+
+# Install dependencies using the project files inside src/
+COPY src/package*.json ./
 RUN npm ci
-COPY . .
+
+# Copy the rest of the frontend source code
+COPY src/ ./
 
 # 👇 Declare and use build args
 ARG VITE_FIREBASE_SHIT
 ENV VITE_FIREBASE_SHIT=${VITE_FIREBASE_SHIT}
-
-# Optional: check value (for debug only)
-# RUN echo "Building with VITE_FIREBASE_SHIT=$VITE_FIREBASE_SHIT"
 
 # Build the application
 RUN npm run build
@@ -18,14 +19,10 @@ RUN npm run build
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
 
-# Optional: custom config
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-# Copy built files
+# Copy built files from the build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
 # 👇 Add this line if you created nginx/default.conf
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY src/nginx/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
-
