--- a/.github/workflows/Backend-deploy.yml
+++ b/.github/workflows/Backend-deploy.yml
@@ -12,59 +12,82 @@ jobs:
     runs-on: self-hosted
     permissions:
       contents: read
+
     steps:
-      - name: Checkout repository
+
+      # 1️⃣ Checkout repository
+      - name: 1. Checkout repository
         uses: actions/checkout@v4
 
-      - name: Verify directory layout
+      # 2️⃣ Verify directory layout
+      - name: 2. Verify directory layout
         working-directory: .
         run: |
           echo "Workspace content:"
           pwd
           ls
-          echo "\nWebAPI contents:"
+          echo ""
+          echo "WebAPI contents:"
           ls WebAPI/src
-          echo "\nData contents:"
+          echo ""
+          echo "Data contents:"
           ls Data/src
           test -f WebAPI/src/NodPT.API.csproj
           test -f Data/src/NodPT.Data.csproj
 
-      - name: Set up Docker Buildx
+      # 3️⃣ Setup Docker Buildx
+      - name: 3. Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Pull latest .NET base images
+      # 4️⃣ Pull latest .NET base images
+      - name: 4. Pull latest .NET base images
         run: |
           docker pull mcr.microsoft.com/dotnet/sdk:8.0
           docker pull mcr.microsoft.com/dotnet/aspnet:8.0
 
-      - name: Build Docker image
+      # 5️⃣ Build Docker image
+      - name: 5. Build Docker image
         working-directory: WebAPI
         run: |
           docker compose build --pull --no-cache
 
-      - name: Deploy with Docker Compose
+      # 6️⃣ Remove old container (required because container_name is fixed)
+      - name: 6. Remove old container
+        working-directory: WebAPI
+        run: |
+          docker rm -f nodpt-api || true
+
+      # 7️⃣ Stop current deployment
+      - name: 7. Stop current deployment
         working-directory: WebAPI
         run: |
           docker compose down || true
+
+      # 8️⃣ Deploy new version
+      - name: 8. Deploy new version
+        working-directory: WebAPI
+        run: |
           docker compose up -d --build --pull always
 
-      - name: Verify deployment health
+      # 9️⃣ Verify deployment health
+      - name: 9. Verify deployment health
         working-directory: WebAPI
         run: |
           echo "Waiting for API health endpoint..."
           for i in {1..3}; do
             if curl -fsS http://localhost:8846/api/health > /dev/null; then
-              echo "✅ API is healthy"
+              echo "API is healthy"
               exit 0
             fi
-            echo "Attempt $i/3: Waiting 2s..."
+            echo "Attempt $i/3 failed, retrying..."
             sleep 2
           done
-          echo "❌ Service failed health check"
+          echo "Service failed health check"
           docker compose logs
           exit 1
 
-      - name: Show logs on failure
+      # 🔟 Show logs on failure
+      - name: 10. Show logs on failure
         if: failure()
         working-directory: WebAPI
         run: docker compose logs
