--- a/.github/workflows/Frontend-deploy.yml
+++ b/.github/workflows/Frontend-deploy.yml
@@ -63,7 +63,7 @@ jobs:
       - name: 6. Remove old container
         working-directory: WebAPI
         run: |
-          docker rm -f nodpt_api || true
+          docker rm -f nodpt_frontend || true
 
       # 6️⃣ Validate built image (Nginx config check)
       - name: 6. Validate Docker and Nginx configuration
