--- a/.github/workflows/Backend-deploy.yml
+++ b/.github/workflows/Backend-deploy.yml
@@ -1,93 +1,92 @@
 name: Docker Build and Deploy (Self-Hosted)
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:
+   push:
+      branches: [main, master]
+      paths:
+         - 'WebAPI/**'
+         - 'Data/**'
 
 jobs:
-  build-and-deploy:
-    runs-on: self-hosted
-    permissions:
-      contents: read
+   build-and-deploy:
+      runs-on: self-hosted
+      permissions:
+         contents: read
 
-    steps:
+      steps:
+         # 1️⃣ Checkout repository
+         - name: 1. Checkout repository
+           uses: actions/checkout@v4
 
-      # 1️⃣ Checkout repository
-      - name: 1. Checkout repository
-        uses: actions/checkout@v4
+         # 2️⃣ Verify directory layout
+         - name: 2. Verify directory layout
+           working-directory: .
+           run: |
+              echo "Workspace content:"
+              pwd
+              ls
+              echo ""
+              echo "WebAPI contents:"
+              ls WebAPI/src
+              echo ""
+              echo "Data contents:"
+              ls Data/src
+              test -f WebAPI/src/NodPT.API.csproj
+              test -f Data/src/NodPT.Data.csproj
 
-      # 2️⃣ Verify directory layout
-      - name: 2. Verify directory layout
-        working-directory: .
-        run: |
-          echo "Workspace content:"
-          pwd
-          ls
-          echo ""
-          echo "WebAPI contents:"
-          ls WebAPI/src
-          echo ""
-          echo "Data contents:"
-          ls Data/src
-          test -f WebAPI/src/NodPT.API.csproj
-          test -f Data/src/NodPT.Data.csproj
+         # 3️⃣ Setup Docker Buildx
+         - name: 3. Set up Docker Buildx
+           uses: docker/setup-buildx-action@v3
 
-      # 3️⃣ Setup Docker Buildx
-      - name: 3. Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+         # 4️⃣ Pull latest .NET base images
+         - name: 4. Pull latest .NET base images
+           run: |
+              docker pull mcr.microsoft.com/dotnet/sdk:8.0
+              docker pull mcr.microsoft.com/dotnet/aspnet:8.0
 
-      # 4️⃣ Pull latest .NET base images
-      - name: 4. Pull latest .NET base images
-        run: |
-          docker pull mcr.microsoft.com/dotnet/sdk:8.0
-          docker pull mcr.microsoft.com/dotnet/aspnet:8.0
+         # 5️⃣ Build Docker image
+         - name: 5. Build Docker image
+           working-directory: WebAPI
+           run: |
+              docker compose build --pull --no-cache
 
-      # 5️⃣ Build Docker image
-      - name: 5. Build Docker image
-        working-directory: WebAPI
-        run: |
-          docker compose build --pull --no-cache
+         # 6️⃣ Remove old container (required because container_name is fixed)
+         - name: 6. Remove old container
+           working-directory: WebAPI
+           run: |
+              docker rm -f nodpt-api || true
 
-      # 6️⃣ Remove old container (required because container_name is fixed)
-      - name: 6. Remove old container
-        working-directory: WebAPI
-        run: |
-          docker rm -f nodpt-api || true
+         # 7️⃣ Stop current deployment
+         - name: 7. Stop current deployment
+           working-directory: WebAPI
+           run: |
+              docker compose down || true
 
-      # 7️⃣ Stop current deployment
-      - name: 7. Stop current deployment
-        working-directory: WebAPI
-        run: |
-          docker compose down || true
+         # 8️⃣ Deploy new version
+         - name: 8. Deploy new version
+           working-directory: WebAPI
+           run: |
+              docker compose up -d --build --pull always
 
-      # 8️⃣ Deploy new version
-      - name: 8. Deploy new version
-        working-directory: WebAPI
-        run: |
-          docker compose up -d --build --pull always
+         # 9️⃣ Verify deployment health
+         - name: 9. Verify deployment health
+           working-directory: WebAPI
+           run: |
+              echo "Waiting for API health endpoint..."
+              for i in {1..3}; do
+                if curl -fsS http://localhost:8846/api/health > /dev/null; then
+                  echo "API is healthy"
+                  exit 0
+                fi
+                echo "Attempt $i/3 failed, retrying..."
+                sleep 2
+              done
+              echo "Service failed health check"
+              docker compose logs
+              exit 1
 
-      # 9️⃣ Verify deployment health
-      - name: 9. Verify deployment health
-        working-directory: WebAPI
-        run: |
-          echo "Waiting for API health endpoint..."
-          for i in {1..3}; do
-            if curl -fsS http://localhost:8846/api/health > /dev/null; then
-              echo "API is healthy"
-              exit 0
-            fi
-            echo "Attempt $i/3 failed, retrying..."
-            sleep 2
-          done
-          echo "Service failed health check"
-          docker compose logs
-          exit 1
-
-      # 🔟 Show logs on failure
-      - name: 10. Show logs on failure
-        if: failure()
-        working-directory: WebAPI
-        run: docker compose logs
+         # 🔟 Show logs on failure
+         - name: 10. Show logs on failure
+           if: failure()
+           working-directory: WebAPI
+           run: docker compose logs
