--- a/.github/workflows/Frontend-deploy.yml
+++ b/.github/workflows/Frontend-deploy.yml
@@ -1,103 +1,99 @@
 name: Build & Deploy Static Frontend (Safe Deploy)
 permissions:
-  contents: read
+   contents: read
 
 on:
    push:
       branches: [main, master]
       paths:
-        - "Frontend/**"
-
-permissions:
-   contents: read
+         - 'Frontend/**'
 
 jobs:
-  build_and_deploy:
+   build_and_deploy:
       runs-on: self-hosted
       env:
          VITE_FIREBASE_SHIT: ${{ secrets.VITE_FIREBASE_SHIT }}
       defaults:
          run:
             working-directory: Frontend
+      steps:
+         # 1️⃣ Checkout latest code (force clean pull)
+         - name: Checkout latest repository code
+           uses: actions/checkout@v4
+           with:
+              fetch-depth: 0 # fetch full commit history
+              clean: true # remove old workspace files
+              ref: main # ensure correct branch
 
-  steps:
-      # 1️⃣ Checkout latest code (force clean pull)
-      - name: Checkout latest repository code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0          # fetch full commit history
-          clean: true             # remove old workspace files
-          ref: main               # ensure correct branch
+         # 2️⃣ Ensure the repo is updated to latest commit
+         - name: 2. Force update repository
+           run: |
+              git fetch origin main
+              git reset --hard origin/main
+              echo "Repository now at latest commit:"
+              git log -1 --online
 
-      # 2️⃣ Ensure the repo is updated to latest commit
-      - name: 2. Force update repository
-        run: |
-          git fetch origin main
-          git reset --hard origin/main
-          echo "Repository now at latest commit:"
-          git log -1 --online
+         # 3️⃣ Verify Docker and Compose versions
+         - name: 3. Docker environment
+           run: |
+              docker version
+              docker compose version
 
-      # 3️⃣ Verify Docker and Compose versions
-      - name: 3. Docker environment
-        run: |
-          docker version
-          docker compose version
+         # 4️⃣ Clean old Docker images (optional but ensures fresh build)
+         - name: 4. Clean old Docker images
+           run: |
+              echo "Cleaning old Docker images..."
+              docker image prune -a -f || true
+              echo "Done."
 
-      # 4️⃣ Clean old Docker images (optional but ensures fresh build)
-      - name: 4. Clean old Docker images
-        run: |
-          echo "Cleaning old Docker images..."
-          docker image prune -a -f || true
-          echo "Done."
+         # 5️⃣ Build Docker image (force fresh build)
+         - name: 5. Build Docker image (no cache)
+           run: |
+              echo "Building Docker image from latest source..."
+              docker compose build \
+                --no-cache \
+                --progress=plain \
+                --build-arg VITE_FIREBASE_SHIT="${VITE_FIREBASE_SHIT}"
+              echo "Build completed."
 
-      # 5️⃣ Build Docker image (force fresh build)
-      - name: 5. Build Docker image (no cache)
-        run: |
-          echo "Building Docker image from latest source..."
-          docker compose build \
-            --no-cache \
-            --progress=plain \
-            --build-arg VITE_FIREBASE_SHIT="${VITE_FIREBASE_SHIT}"
-          echo "Build completed."
+         # 6️⃣ Remove old container (required because container_name is fixed)
+         - name: 6. Remove old container
+           working-directory: Frontend
+           run: |
+              docker rm -f nodpt-frontend || true
 
-      # 6️⃣ Remove old container (required because container_name is fixed)
-      - name: 6. Remove old container
-        working-directory: Frontend
-        run: |
-          docker rm -f nodpt-frontend || true
+         # 6️⃣ Validate built image (Nginx config check)
+         - name: 6.1. Validate Docker and Nginx configuration
+           run: |
+              echo "Testing Nginx configuration..."
+              docker run --rm nodpt-frontend:latest nginx -t || (echo "❌ Nginx test failed" && exit 1)
+              echo "Nginx configuration OK."
 
-      # 6️⃣ Validate built image (Nginx config check)
-      - name: 6. Validate Docker and Nginx configuration
-        run: |
-          echo "Testing Nginx configuration..."
-          docker run --rm nodpt-frontend:latest nginx -t || (echo "❌ Nginx test failed" && exit 1)
-          echo "Nginx configuration OK."
+         # 7️⃣ Stop current deployment
+         - name: 7. Stop current deployment
+           run: |
+              echo "Stopping existing deployment..."
+              docker compose down || true
+              echo "Stopped."
 
-      # 7️⃣ Stop current deployment
-      - name: 7. Stop current deployment
-        run: |
-          echo "Stopping existing deployment..."
-          docker compose down || true
-          echo "Stopped."
+         # 8️⃣ Start new deployment
+         - name: 8. Deploy new version
+           run: |
+              echo "Starting new deployment..."
+              docker compose up -d --build
+              echo "Deployment started."
 
-      # 8️⃣ Start new deployment
-      - name: 8. Deploy new version
-        run: |
-          echo "Starting new deployment..."
-          docker compose up -d --build
-          echo "Deployment started."
+         # 9️⃣ List active containers
+         - name: 9. Check running containers
+           run: |
+              echo "Active containers:"
+              docker ps
 
-      # 9️⃣ List active containers
-      - name: 9. Check running containers
-        run: |
-          echo "Active containers:"
-          docker ps
-
-      # 🔟 Health check after deployment
-      - name: 10. Health check
-        run: |
-          echo "Waiting for service to start..."
-          sleep 5
-          echo "Performing health check on http://localhost:8443"
-          curl -I http://localhost:8443 || (echo "Health check failed" && exit 1)
-          echo "Health check passed."
+         # 🔟 Health check after deployment
+         - name: 10. Health check
+           run: |
+              echo "Waiting for service to start..."
+              sleep 5
+              echo "Performing health check on http://localhost:8443"
+              curl -I http://localhost:8443 || (echo "Health check failed" && exit 1)
+              echo "Health check passed."
