--- a/Frontend/src/nginx/default.conf
+++ b/Frontend/src/nginx/default.conf
@@ -10,7 +10,8 @@ server {
   }
 
   # ✅ Safe CSP options:
-  add_header Content-Security-Policy "script-src 'self' https://nodpt.com https://*.nodpt.com https://*.cloudflare.com https://*.cloudflareinsights.com https://apis.google.com 'unsafe-inline';" always;
+  # add_header Content-Security-Policy "script-src 'self' https://nodpt.com https://*.nodpt.com https://*.cloudflare.com https://*.cloudflareinsights.com https://apis.google.com 'unsafe-inline';" always;
+  add_header Content-Security-Policy "script-src 'self' https://nodpt.com https://*.nodpt.com https://*.cloudflare.com https://static.cloudflareinsights.com https://apis.google.com 'unsafe-inline';" always;
 
   # Optional extras
   add_header X-Content-Type-Options "nosniff" always;
