Switch to .NET 8, add Firebase, and improve configs
Updated the target framework to .NET 8 for stability. Added
Firebase authentication setup, including project ID handling
and development mode fallback. Introduced `.env` file loading
for development and improved Redis connection handling with
better logging. Enhanced CORS configuration for production
with updated allowed origins.

Updated `appsettings.json` with production-ready values,
including Firebase project ID and Redis connection string.
Added a Visual Studio solution file for better project
management.

--- a/SignalR/src/appsettings.json
+++ b/SignalR/src/appsettings.json
@@ -8,16 +8,19 @@
   "AllowedHosts": "*",
   "Cors": {
     "AllowedOrigins": [
-      "https://yourdomain.com",
-      "https://www.yourdomain.com"
+      "https://nodpt.com",
+      "https://api.nodpt.com"
     ]
   },
   "Redis": {
-    "ConnectionString": "redis:6379",
+    "ConnectionString": "localhost:6379",
     "StreamListener": {
       "MessageBatchSize": 10,
       "PollingDelayMs": 100,
       "ErrorRetryDelayMs": 1000
     }
+  },
+  "Firebase": {
+    "ProjectId": "nodpt-19ab2"
   }
 }
