--- a/SignalR/docker-compose.yml
+++ b/SignalR/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 networks:
   backend_network:
     external: true
@@ -28,10 +26,9 @@ services:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8848
 
-   # 🔹 Docker networks for DB, backend & frontend
+    # 🔹 Docker networks for DB, backend & frontend
     networks:
       - backend_network
       - frontend_network
-
     # 🔹 Auto restart on failure
-    restart: always
+    # restart: always
