fix redis connection string

--- a/SignalR/src/appsettings.json
+++ b/SignalR/src/appsettings.json
@@ -13,7 +13,7 @@
     ]
   },
   "Redis": {
-    "ConnectionString": "localhost:8847",
+    "ConnectionString": "nodpt-redis:6379",
     "StreamListener": {
       "MessageBatchSize": 10,
       "PollingDelayMs": 100,
