Fix Redis configuration in docker-compose and update connection settings in application

--- a/Redis/docker-compose.yml
+++ b/Redis/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   redis:
     build:
@@ -7,14 +5,20 @@ services:
       dockerfile: Dockerfile
     image: nodpt-redis:latest
     container_name: nodpt-redis
+
     ports:
-      - "8847:8847"
+      - "8847:6379" # FIXED
+
     volumes:
       - redis-data:/data
     restart: always
-    # Note: vm.overcommit_memory=1 must be set on the host system
-    # Run on host: sudo sysctl vm.overcommit_memory=1
-    # Or add to /etc/sysctl.conf: vm.overcommit_memory = 1
+    networks:
+      - backend_network
 
 volumes:
   redis-data:
+
+
+networks:
+  backend_network:
+    external: true
