--- a/Redis/src/redis.conf
+++ b/Redis/src/redis.conf
@@ -1,11 +1,11 @@
 # Bind to localhost only for security
-bind 127.0.0.1
+bind 0.0.0.0
 
 # Enable protected mode for additional safety
-protected-mode yes
+protected-mode no
 
 # Port configuration
-port 8847
+port 6379
 
 # Enable memory overcommit to prevent background save failures
 # This addresses: WARNING Memory overcommit must be enabled!
