Update Redis health check port and add DataProtection to Redis in SignalR; modify WebAPI and SignalR docker-compose for environment variables

--- a/WebAPI/docker-compose.yml
+++ b/WebAPI/docker-compose.yml
@@ -24,7 +24,8 @@ services:
     # 🔹 Environment variables specific to ASP.NET Core
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://+:8846
+      - ASPNETCORE_URLS=http://0.0.0.0:8846
+      - ASPNETCORE_HTTP_PORTS=8846
 
     # 🔹 Docker network for DB & backend
     networks:
