--- a/SignalR/docker-compose.yml
+++ b/SignalR/docker-compose.yml
@@ -24,7 +24,8 @@ services:
     # 🔹 Environment variables specific to ASP.NET Core
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_URLS=http://+:8848
+      - ASPNETCORE_URLS=http://0.0.0.0:8848
+      - ASPNETCORE_HTTP_PORTS=8848
 
     # 🔹 Docker networks for DB, backend & frontend
     networks:
