Refactor Executor Dockerfile and docker-compose.yml to update Redis connection and environment variables
- Changed Redis connection string in Dockerfile from localhost to nodpt-redis.
- Updated docker-compose.yml to define nodpt-executor service, configure environment variables, and set up external network.
- Removed redis service and adjusted port mappings for nodpt-executor.
- Added external environment file loading for nodpt-executor service.

Update Frontend SignalR service to use new backend port

- Changed default SignalR base URL in signalRService.js from localhost:8446 to localhost:8848.

Update SignalR README and configuration for .NET version and Redis connection

- Updated README to reflect .NET 8 requirement.
- Changed Redis connection string in appsettings.json from redis:6379 to nodpt-redis:6379.

Refactor NodptHub to use custom authorization attribute

- Replaced [Authorize] attribute with [CustomAuthorized] in NodptHub.cs.

Add RedisStreamListener service to handle Redis stream messages

- Implemented RedisStreamListener to process messages from Redis streams and route them to SignalR clients.

Remove unused classes and files

- Deleted RedisAiListener and CustomAuthorizedAttribute from WebAPI and Data projects.
- Removed DatabaseInitializer and UserService implementations from WebAPI.

Update appsettings for CORS configuration

- Added CORS settings to appsettings.Development.json and appsettings.json for allowed origins.

Refactor Program.cs for improved configuration and error handling

- Enhanced Program.cs to load environment variables and configure Redis connection with error handling.
- Improved CORS policy configuration based on environment settings.

--- a/Executor/docker-compose.yml
+++ b/Executor/docker-compose.yml
@@ -1,31 +1,32 @@
-version: '3.8'
+networks:
+  backend_network:
+    external: true
 
 services:
-  redis:
-    image: redis/redis-stack:latest
-    ports:
-      - "6379:6379"
-      - "8001:8001"  # RedisInsight web UI
-    environment:
-      - REDIS_ARGS=--save 60 1
-    volumes:
-      - redis-data:/data
-
-  backend-executor:
+  nodpt-executor:
     build:
-      context: .
-      dockerfile: Dockerfile
-    image: nodpt-backend-executor:latest
-    container_name: nodpt-backend-executor
-    environment:
-      - REDIS_CONNECTION=redis:6379
-      - MAX_MANAGER=5
-      - MAX_INSPECTOR=10
-      - MAX_AGENT=20
-      - MAX_TOTAL=50
-    depends_on:
-      - redis
-    restart: unless-stopped
+      context: ..
+      dockerfile: Executor/Dockerfile
+    image: nodpt-executor:latest
+    container_name: nodpt-executor
+    pull_policy: always
 
-volumes:
-  redis-data:
+    # 🔹 Load external environment file
+    env_file:
+      - /home/runner_user/envs/backend.env
+
+    # 🔹 Expose backend port 
+    ports:
+      - "8848:8848"
+
+    # 🔹 Environment variables specific to ASP.NET Core
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Production
+      - ASPNETCORE_URLS=http://0.0.0.0:8848
+      - ASPNETCORE_HTTP_PORTS=8848
+
+    # 🔹 Docker networks for DB, backend & frontend
+    networks:
+      - backend_network
+    # 🔹 Auto restart on failure
+    # restart: always
