--- a/WebAPI/src/appsettings.json
+++ b/WebAPI/src/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://api.nodpt.com",
+      "https://nodpt.com",
+      "https://*.nodpt.com",
+      "https://www.nodpt.com"
+    ]
   }
 }
