--- a/Data/src/NodPT.Data.csproj
+++ b/Data/src/NodPT.Data.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpress.Xpo" Version="25.1.3" />
+    <PackageReference Include="DevExpress.Data" Version="25.1.3" />
+    <PackageReference Include="FirebaseAdmin" Version="3.4.0" />
+    <!-- Add authentication and identity model packages required by FirebaseHelper.cs -->
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 
 </Project>
