--- a/WebAPI/src/appsettings.Development.json
+++ b/WebAPI/src/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:*",
+      "https://localhost:*"
+    ]
   }
 }
