--- a/Frontend/src/package.json
+++ b/Frontend/src/package.json
@@ -21,7 +21,7 @@
 		"highlight.js": "^11.8.0",
 		"install": "0.13.0",
 		"marked": "^5.1.0",
-		"npm": "11.5.2",
+		"npm": "^9.6.5",
 		"rete": "^2.0.6",
 		"rete-area-plugin": "^2.1.3",
 		"rete-auto-arrange-plugin": "^2.0.2",
