Refactor architecture and update documentation
- Updated Docker configurations to use `gpus: all` for GPU support.
- Removed `CHAT_WORKFLOW.md` and redundant sections in `README.md`.
- Transitioned from repository pattern to service-based architecture.
- Simplified `Data/` structure and removed `DevExpress.Data` dependency.
- Introduced `EventBus Plugin` for event-driven communication in frontend.
- Updated architecture diagram and frontend component descriptions.
- Streamlined database setup, migrations, and testing documentation.
- Improved controller logic by recommending direct `User` object usage.

--- a/AI/docker-compose.yml
+++ b/AI/docker-compose.yml
@@ -13,7 +13,7 @@ services:
           devices:
             - capabilities: [ gpu ]
 
-    # OR for older Docker versions:
+    # enable all GPUs
     gpus: all
 
     volumes:
