Refactor and enhance application components
- Updated package dependencies in Frontend to remove unused packages.
- Modified Redis configuration to bind to localhost for security.
- Refactored SignalRUpdateListener to include new interface dependencies.
- Updated ChatController to streamline message handling and removed unused envelope properties.
- Enhanced Program.cs to improve Redis connection handling with retry options.
- Updated appsettings.json to change Redis connection string.
- Added VSCode settings for SQL tools configuration.
- Created Dockerfile for MariaDB setup with environment variables for database configuration.
- Added docker-compose.yml for orchestrating the MariaDB service.
- Introduced DTOs for message history, memory options, and summarization configurations.
- Implemented interfaces for memory and Redis services to encapsulate functionality.
- Added solution file for BackendExecutor project.

--- a/WebAPI/src/appsettings.json
+++ b/WebAPI/src/appsettings.json
@@ -18,6 +18,7 @@
     ]
   },
   "Redis": {
+    "ConnectionString":  "localhost:8847",
     "Streams": {
       "JobsChat": "jobs:chat",
       "SignalRUpdates": "signalr:updates",
