--- a/Data/src/NodPT.Data.csproj
+++ b/Data/src/NodPT.Data.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
