Refactor SignalR and Chat API services, extend timeout settings, and update Redis configuration

--- a/WebAPI/src/appsettings.Development.json
+++ b/WebAPI/src/appsettings.Development.json
@@ -14,5 +14,13 @@
       "https://localhost:*",
       "http://localhost:5173"
     ]
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379",
+    "Streams": {
+      "JobsChat": "jobs:chat",
+      "SignalRUpdates": "signalr:updates",
+      "TrimMaxLength": 10000
+    }
   }
 }
