--- a/WebAPI/src/appsettings.json
+++ b/WebAPI/src/appsettings.json
@@ -18,7 +18,7 @@
     ]
   },
   "Redis": {
-    "ConnectionString":  "nodpt-redis:6379",
+    "ConnectionString": "localhost:6379",
     "Streams": {
       "JobsChat": "jobs:chat",
       "SignalRUpdates": "signalr:updates",
